[package]
name = "bender_mq"
version = "0.1.0"
authors = ["David Huss <dh@widerstandzwecklos.at>"]
workspace = ".."

[dependencies]
amqp = { version = "0.1.2", default-features = false }

bender_config = { git = "ssh://git@code.hfbk.net:4242/bendercode/bender-config.git" }
bender_job = { git = "ssh://git@code.hfbk.net:4242/bendercode/bender-job.git" }
