[package]
name = "bender_mq"
version = "0.1.1"
license = "MIT"
readme = "README.md"
authors = ["David Huss <dh@widerstandzwecklos.at>"]
description = "As part of the bender renderfarm, the bender-mq library acts as a link between the various services and rabbitmq"
workspace = ".."

[package.metadata.deb]
extended-description = "As part of the bender renderfarm, the bender-mq library acts as a link between the various services and rabbitmq"
depends = "$auto, rabbitmq-server"

[dependencies]
amqp = { version = "0.1.2", default-features = false }

bender_config = { git = "ssh://git@code.hfbk.net:4242/bendercode/bender-config.git" }
bender_job = { git = "ssh://git@code.hfbk.net:4242/bendercode/bender-job.git" }
