[package]
name = "bender_mq"
version = "0.2.13"
license = "MIT"
readme = "README.md"
authors = ["David Huss <dh@widerstandzwecklos.at>"]
description = "As part of the bender renderfarm, the bender-mq library acts as a link between the various services and rabbitmq"
workspace = ".."

[package.metadata.deb]
extended-description = "As part of the bender renderfarm, the bender-mq library acts as a link between the various services and rabbitmq"
depends = "$auto, rabbitmq-server"

[dependencies]
amqp = { version = "0.1.3", default-features = false }

bender_config = { git = "https://github.com/atoav/bender-config.git" }
bender_job = { git = "https://github.com/atoav/bender-job.git" }
